@@ -26,6 +26,7 @@ setup(name='borg.localrole',
       zip_safe=False,
       install_requires=[
           "setuptools",
+          "plone.memoize",
       ],
       entry_points="""
       # -*- Entry points: -*-
